syntax = "proto3";

package io.flomesh.demo.grpc;
option java_multiple_files = true;
option java_package = "io.flomesh.demo.grpc.stub";

message Book {
  string id = 1;
  int32 value = 2;
}

message SuccessResponse {
  bool success = 1;
}

message RawResponse {
  int32 counter = 1;
}

message Empty {}